MyOrg2022/force-app/main/default/objects/ExceptionLog__c/ExceptionLog__c.object-meta.xml
<CustomObject>
    <label>ExceptionLog</label>
    <nameField>
        <label>Exception Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExceptionLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>