MyOrg2022/force-app/main/default/objects/ExceptionLog__c/fields/ExceptionLogDateTime__c.field-meta.xml
<CustomField>
    <fullName>ExceptionLogDateTime__c</fullName>
    <description>Exception created date and time from flow</description>
    <inlineHelpText>Exception created date and time from flow</inlineHelpText>
    <label>ExceptionLogDateTime</label>
    <type>DateTime</type>
</CustomField>