MyOrg2022/force-app/main/default/objects/ExceptionLog__c/fields/ExceptionRecordID__c.field-meta.xml
<CustomField>
    <fullName>ExceptionRecordID__c</fullName>
    <description>Failed Record ID</description>
    <inlineHelpText>Failed Record ID</inlineHelpText>
    <label>ExceptionRecordID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>