MyOrg2022/force-app/main/default/objects/ExceptionLog__c/fields/LogError__c.field-meta.xml
<CustomField>
    <fullName>LogError__c</fullName>
    <inlineHelpText>Error Description</inlineHelpText>
    <label>LogError</label>
    <type>TextArea</type>
</CustomField>