MyOrg2022/force-app/main/default/objects/ExceptionLog__c/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <description>Name of the object</description>
    <inlineHelpText>Name of the object</inlineHelpText>
    <label>object</label>
    <length>50</length>
    <type>Text</type>
</CustomField>