MyOrg2022/force-app/main/default/objects/ExceptionLog__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <description>Type of DML</description>
    <inlineHelpText>Type of DML</inlineHelpText>
    <label>Operation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>